--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,20 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "scripts": {
     "start": "react-scripts start",
