--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.12.0",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
