booking screen updated and data range selector created

--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.5",
     "axios": "^0.26.1",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.3",
     "path": "^0.12.7",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
