--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.5",
+    "aos": "^2.3.4",
     "axios": "^0.26.1",
     "fs": "^0.0.1-security",
     "moment": "^2.29.3",
